<resources>
    <string name="app_name">Mandatory Inspection</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="inspection_heading">Total DEMO Inspection</string>
    <string name="user_name">Amit Jadhav</string>
    <string name="number_text">6712311</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="demo_question_text">Your date question goes here</string>
    <string name="demo_input_text">Input Goes here</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="distributor_details">Distributor Details</string>
    <string name="service_home">Service Home</string>
    <string name="user_details">User Details</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Settings">settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_question_goes_here">Your Question goes here</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="log_out">Log out</string>
    <string name="dialog_wait">Please wait......</string>
    <string name="sync_offline_entries">Sync Offline Entries</string>
    <string name="spinner_empty_text">Fields cannot be kept empty</string>
    <string name="spinner_default_item">Select one,</string>
    <string name="prev">Prev</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>


</resources>

