<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/sync_entries"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/sync_offline_entries" />
        <item
            android:id="@+id/distributor_details"
            android:icon="@drawable/building_icon"
            android:title="@string/distributor_details" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"

            android:title="@string/Settings" />

    </group>



</menu>