<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:paddingTop="@dimen/icon_padding" android:padding="10dp"

    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    android:id="@+id/card_radio_layout"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/icon_padding"
        android:layout_marginTop="@dimen/icon_padding"
        android:layout_marginLeft="@dimen/icon_padding"
        >

        <TextView
            android:id="@+id/radio_question_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/your_question_goes_here" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/icon_padding"
        >

        <TextView
            android:layout_width="231dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:id="@+id/radioGroup"

            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/radio_yes"
                android:text="@string/yes"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/radio_no"
                android:text="@string/no"
                />

        </RadioGroup>

    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>
